crates/nash-can/tests/snapshots/kinds__alias_substitution_preserves_application_head_and_argument.snap
---
source: crates/nash-can/tests/kinds.rs
---
Located {
    region: Region {
        start: Position {
            line: 0,
            column: 0,
        },
        end: Position {
            line: 0,
            column: 0,
        },
    },
    value: Named {
        reference: QualifiedName {
            home: ModuleName {
                package: Some(
                    PackageName {
                        author: "nash",
                        project: "core",
                        version: "",
                        source: Compiler,
                        compilation: None,
                    },
                ),
                name: "Builtin",
            },
            name: "list",
        },
        args: [
            Located {
                region: Region {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 0,
                    },
                },
                value: Named {
                    reference: QualifiedName {
                        home: ModuleName {
                            package: Some(
                                PackageName {
                                    author: "nash",
                                    project: "core",
                                    version: "",
                                    source: Compiler,
                                    compilation: None,
                                },
                            ),
                            name: "Builtin",
                        },
                        name: "unit",
                    },
                    args: [],
                },
            },
        ],
    },
}
