crates/nash-can/tests/snapshots/kinds__annotation_accepts_variable_application.snap
---
source: crates/nash-can/tests/kinds.rs
description: "f : 'f 'a -> 'f 'a\nf x = x"
---
(
    [],
    [],
)
