crates/nash-can/tests/snapshots/kinds__annotation_kinds_keep_application_parameters_correlated.snap
---
source: crates/nash-can/tests/kinds.rs
expression: kinds
---
ValueKinds {
    bounds: [
        KindSet(
            8,
        ),
        KindSet(
            15,
        ),
        KindSet(
            15,
        ),
        KindSet(
            7,
        ),
    ],
    kinds: [
        Var(
            0,
        ),
        Var(
            1,
        ),
        Var(
            2,
        ),
    ],
    applications: [
        KindApplication {
            head: Var(
                0,
            ),
            arguments: [
                Var(
                    2,
                ),
                Var(
                    1,
                ),
            ],
            result: Var(
                3,
            ),
        },
    ],
}
