crates/nash-can/tests/snapshots/kinds__annotation_parameter_occurrences_share_kind_bounds.snap
---
source: crates/nash-can/tests/kinds.rs
description: "f : list 'f -> 'f 'a -> int\nf xs g = 1"
---
[
    KindTooManyArgs {
        region: Region {
            start: Position {
                line: 5,
                column: 16,
            },
            end: Position {
                line: 5,
                column: 21,
            },
        },
        head: Var(
            "f",
        ),
        applied: 1,
        accepted: 0,
    },
]
