crates/nash-can/tests/snapshots/kinds__annotation_parameter_occurrences_share_one_kind.snap
---
source: crates/nash-can/tests/kinds.rs
description: "module Main exposing (..)\n\nimport Primitive exposing (..)\nimport Builtin exposing (..)\n\nf : list 'f -> 'f 'a -> int\nf xs g = 1\n"
info: diagnostic
---
nash::names::kind_mismatch

  × Kind mismatch in the annotation for `f`.
   ╭─[src/Main.nash:6:19]
 5 │ 
 6 │ f : list 'f -> 'f 'a -> int
   ·                   ──
 7 │ f xs g = 1
   ╰────
  help: Expected kind `Type`, found `Type -> Type`.
