crates/nash-can/tests/snapshots/kinds__annotation_rejects_higher_kinded_value_position.snap
---
source: crates/nash-can/tests/kinds.rs
description: "module Main exposing (..)\n\nimport Primitive exposing (..)\nimport Builtin exposing (..)\n\nf : ('f 'a, 'f) -> int\nf x = 1\n"
info: diagnostic
---
nash::names::kind_mismatch

  × Kind mismatch in the annotation for `f`.
   ╭─[src/Main.nash:6:13]
 5 │ 
 6 │ f : ('f 'a, 'f) -> int
   ·             ──
 7 │ f x = 1
   ╰────
  help: Expected kind `Type`, found `Type -> Type`.
