crates/nash-can/tests/snapshots/kinds__annotation_rejects_inconsistent_higher_kinded_arguments.snap
---
source: crates/nash-can/tests/kinds.rs
description: "module Main exposing (..)\n\nimport Primitive exposing (..)\nimport Builtin exposing (..)\n\ntype tag 'a = Tag\ntype option 'a = Some 'a\ntype app 'f 'a = App ('f 'a)\ntype wrap 'f 'g 'a = Wrap ('f ('g 'a))\nidentity : wrap (app tag) app option -> wrap (app tag) app option\nidentity x = x\n"
info: diagnostic
---
nash::names::kind_mismatch

  × Kind mismatch in the annotation for `identity`.
    ╭─[src/Main.nash:10:27]
  9 │ type wrap 'f 'g 'a = Wrap ('f ('g 'a))
 10 │ identity : wrap (app tag) app option -> wrap (app tag) app option
    ·                           ───
 11 │ identity x = x
    ╰────
  help: Expected kind `Type`, found `Type -> Type`.
