crates/nash-can/tests/snapshots/kinds__annotation_rejects_little_container_element_in_argument.snap
---
source: crates/nash-can/tests/kinds.rs
description: "module Main exposing (..)\n\nimport Primitive exposing (..)\nimport Builtin exposing (..)\n\ntype option 'a = None | Some 'a\nf : list (option int) -> int\nf x = 1\n"
info: diagnostic
---
nash::names::representation_mismatch

  × This position requires `Storable` in the annotation for `f`:
   ╭─[src/Main.nash:7:11]
 6 │ type option 'a = None | Some 'a
 7 │ f : list (option int) -> int
   ·           ──────────
 8 │ f x = 1
   ╰────
  help: The type has `Term` representation, but `Storable` admits Big or Const types.
        Change the type or the representation requirement.
