crates/nash-can/tests/snapshots/kinds__annotation_retains_one_storable_predicate.snap
---
source: crates/nash-can/tests/kinds.rs
---
Annotation {
    context: [
        Implied {
            trait_: QualifiedName {
                home: ModuleName {
                    package: Some(
                        PackageName {
                            author: "nash",
                            project: "base",
                        },
                    ),
                    name: "Primitive",
                },
                name: "Storable",
            },
            args: [
                Located {
                    region: Region {
                        start: Position {
                            line: 0,
                            column: 0,
                        },
                        end: Position {
                            line: 0,
                            column: 0,
                        },
                    },
                    value: Var(
                        "a",
                    ),
                },
            ],
        },
    ],
    free_vars: [
        "a",
    ],
    typ: Located {
        region: Region {
            start: Position {
                line: 0,
                column: 0,
            },
            end: Position {
                line: 0,
                column: 0,
            },
        },
        value: Lambda {
            from: Located {
                region: Region {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 0,
                    },
                },
                value: Var(
                    "a",
                ),
            },
            to: Located {
                region: Region {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 0,
                    },
                },
                value: Named {
                    reference: QualifiedName {
                        home: ModuleName {
                            package: Some(
                                PackageName {
                                    author: "nash",
                                    project: "base",
                                },
                            ),
                            name: "Primitive",
                        },
                        name: "list",
                    },
                    args: [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 0,
                                    column: 0,
                                },
                                end: Position {
                                    line: 0,
                                    column: 0,
                                },
                            },
                            value: Var(
                                "a",
                            ),
                        },
                    ],
                },
            },
        },
    },
}
