crates/nash-can/tests/snapshots/kinds__annotation_returns_shared_storable_bound.snap
---
source: crates/nash-can/tests/kinds.rs
expression: kinds
---
ValueKinds {
    bounds: [
        KindSet(
            3,
        ),
    ],
    kinds: [
        Var(
            0,
        ),
    ],
}
